# FacsimileProject

FacsimileProject/: CMakeLists.txt
FacsimileProject/Documentazione/: doc_plant_uml.txt
